# cutting-stock

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  STATUS.md  pyproject.toml
docs/: GUI_DESIGN.md  PLAN.md  RESOLUTION-2026-06-18.md  SOLVER_DESIGN.md  SPEC.md
docs/history/: GUI_DESIGN-2026-06.md  PLAN-2026-06.md  SOLVER_DESIGN-2026-06.md  STATUS-2026-06-18.md
logs/: PROGRESS-retired-2026-06-23.md
solver/: __init__.py  api.py  arcgraph.py  bounds.py  cli.py  decompose.py  errors.py  flow_mip.py  http.py  models.py  normalize.py  oracle.py  pareto.py  setup_mip.py  solve.py  verify.py
solver/tests/: test_api.py  test_benchmark.py  test_invariants.py  test_material_solve.py  test_oracle_crosscheck.py  test_pareto.py  test_proven_optimal.py  test_smoke.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/e2e/: smoke.py
web/scripts/: gen_fixtures.py
web/src/: App.css  App.tsx  colors.test.ts  colors.ts  fixtures.ts  format.ts  index.css  labels.test.ts  labels.ts  main.tsx  report.test.ts  report.ts
web/src/api/: client.ts  types.ts
web/src/components/: ComparePanel.tsx  InputPanel.tsx  MetricsCard.tsx  OptimalityBadge.tsx  ParetoChart.tsx  PatternBar.tsx  PatternView.tsx  TradeoffToggle.tsx
