[project]
name = "cutting-stock"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "highspy>=1.14.0",
    "ortools>=9.15.6755",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["solver/tests"]
addopts = "-q -m 'not slow'"
markers = [
    "slow: 実規模ベンチマーク（既定スイートから除外。`uv run pytest -m slow` で実行）",
]
filterwarnings = [
    # starlette TestClient の httpx 非推奨警告（良性・third-party）
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
